# rewy_protocol

./: .gitignore  Anchor.toml  business_airdrop_Sample.json  fetched_idl.json
programs/rewy_campaigns/: Cargo.toml
programs/rewy_campaigns/src/: lib.rs
tests/: rewy_campaigns.ts  rewy_protocol.ts
